--- a/Web/index.html
+++ b/Web/index.html
@@ -15,7 +15,7 @@
 
           <nav class="menu">
             <ul>
-              <li><a href="Index.html"style="background:#df6666;color:white;">Inici</a></li>
+              <li><a href="index.html"style="background:#df6666;color:white;">Inici</a></li>
               <li><a href="#r1">Llocs</a></li>
               <li><a href="QuienesSomos.html">Qui som</a></li>
               <li><a href="Contactanos.html">Contacta'ns</a></li>
