--- a/Web/QuienesSomos.html
+++ b/Web/QuienesSomos.html
@@ -16,7 +16,7 @@
 
           <nav class="menu">
             <ul>
-              <li><a href="Index.html"style="background:#df6666;color:white;">Inici</a></li>
+              <li><a href="index.html"style="background:#df6666;color:white;">Inici</a></li>
               <li><a href="Contactanos.html">Contacta'ns</a></li>
             </ul>
           </nav>
