--- a/Web/index.html
+++ b/Web/index.html
@@ -46,7 +46,7 @@
                     <td>
 
                   <p><h1><a name="r1">Dubai</h1>
-                  A els Emirats Àrabs, 200 quilòmetres al nord de la seva capital Abu Dhabi, es troba Dubai, la ciutat del món que més ha crescut en l'última dècada, una destinació turística de luxe cada dia més sol·licitat per viatgers de tot el món. A la nostra guia turística podràs descobrir tots els secrets d'aquesta ciutat que ha començat a donar-se a conèixer a la fi del segle XX.</p>
+                  Als Emirats Àrabs, a 200 quilòmetres al nord de la seva capital Abu Dhabi, es troba Dubai, la ciutat del món que més ha crescut en l'última dècada, una destinació turística de luxe cada dia més sol·licitat per viatgers de tot el món. A la nostra guia turística podràs descobrir tots els secrets d'aquesta ciutat que ha començat a donar-se a conèixer a la fi del segle XX.</p>
                 </td>
                 </tr>
                   </div>
