--- a/Web/Roma.html
+++ b/Web/Roma.html
@@ -37,7 +37,7 @@
           <div id="BasilicaSanPedro">
             <img src="Fotos/BaislicaSanPedro.jpg">
             <h3>1. Basilica de San Pere</h3>
-              <p>La Basilica di San Pietro està construïda sobre les restes d’una església anterior amb el mateix nom, que es comença a edificar a l’època de l’emperador Constantí. Encara més enllà en el temps, aquí ja hi havia hagut un lloc de pregària en honor de l’apòstol Pere, que té, quasi amb tota seguretat, la tomba sota la basílica.
+              <p>La Basilica di San Pietro està construïda sobre les restes d’una església anterior amb el mateix nom, que es començà a edificar a l’època de l’emperador Constantí. Encara més enllà en el temps, aquí ja hi havia hagut un lloc de pregària en honor de l’apòstol Pere, que té, quasi amb tota seguretat, la tomba sota la basílica.
               L’edifici actual fou construït, a partir del 1506, segons els projectes de Bramante, Antonio i Giuliano de Sangallo sota l’ègida del “papa constructor”, Juli II. En la construcció, hi participaren els artistes més famosos de l’alt Renaixement, sobre Rafael i Miquel Àngel.</p>
           </div>
      </div>
